# Nanastoy_MathWorld

./: README.rst  main.py  pyproject.toml
nanastoy_mathworld/: MATHWORLD.py  end.py  loot.py  mainGame.py  quiz.py  randomroom.py  utils.py
tests/: test_nanastoy_mathworld.py
