[tool.poetry]
name = "Nanastoy_MathWorld"
version = "0.1.0"
description = "A challenging escape from an alternate dimension
              of Nanastoy's MathWorld"
authors = ["MackyTD <thanatisd2545@gmail.com>",
"Muskan9347 <mbindal250902@gmail.com",
"timkyon <evilza555@gmail.com>",
"jidapatuck <jidapa.cheng@gmail.com>",]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
